--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
 <body>
 <div class="login-container">
   <h2>Login</h2>
-  <form id="loginForm">
+  <form id="loginForm", method="post">
     <div class="form-input">
       <label for="username">Username</label>
       <input type="text" id="username" name="username" required>
