--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -64,16 +64,15 @@
 <body>
 <div class="container">
   <h2>User Information Form</h2>
-  <form action="/submit-form" method="post">
+  <form action="/user/join" method="post">
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email">
 
-    <label for="is_male">Is Male:</label>
-    <input type="checkbox" id="is_male" name="is_male">
-
-    <label for="message">Message:</label>
-    <input type="text" id="message" name="message">
+    <select name="sex" id="sex">
+      <option value="male">male</option>
+      <option value="female">female</option>
+    </select>
 
     <label for="name">Name:</label>
     <input type="text" id="name" name="name">
@@ -84,11 +83,11 @@
     <label for="phone_number">Phone Number:</label>
     <input type="tel" id="phone_number" name="phone_number">
 
-    <label for="position">Position:</label>
-    <input type="number" id="position" name="position">
-
     <label for="username">Username:</label>
     <input type="text" id="username" name="username">
+
+    <label for="address">Address:</label>
+    <input type="text" id="address" name="address">
 
     <input type="submit" value="Submit">
   </form>
