--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script type="text/javascript" th:src="@{/js/join.js}"></script>
   <title>User Information Form</title>
   <style>
     body {
@@ -64,7 +65,7 @@
 <body>
 <div class="container">
   <h2>User Information Form</h2>
-  <form action="/user/join" method="post">
+  <form id="joinForm" action="#" method="post">
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email">
@@ -89,7 +90,7 @@
     <label for="address">Address:</label>
     <input type="text" id="address" name="address">
 
-    <input type="submit" value="Submit">
+    <button id="joinSubmitButton">Submit</button>
   </form>
 </div>
 </body>
