fix : add html xmlns:th address

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <script type="text/javascript" th:src="@{/js/join.js}"></script>
   <title>User Information Form</title>
