feat : finished working on Join Logic and Login logic.

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -90,7 +90,7 @@
     <label for="address">Address:</label>
     <input type="text" id="address" name="address">
 
-    <button id="joinSubmitButton">Submit</button>
+    <button type="button" id="joinSubmitButton">Submit</button>
   </form>
 </div>
 </body>
