feat: draw recommended route line on the map after requestion

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
   <script type="text/javascript" th:src="@{/js/join.js}"></script>
   <title>User Information Form</title>
@@ -90,7 +90,7 @@
     <label for="address">Address:</label>
     <input type="text" id="address" name="address">
 
-    <button id="joinSubmitButton">Submit</button>
+    <button type="button" id="joinSubmitButton">Submit</button>
   </form>
 </div>
 </body>
