feat: draw recommended route line on the map after requestion

--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.w3.org/1999/xhtml" lang="ko">
 <head>
   <script type="text/javascript" th:src="@{/js/join.js}"></script>
   <title>User Information Form</title>
