--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,12 +2,21 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Home Page</title>
-  <!-- Add any additional stylesheet links here -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
+<body class="container">
 <h1>Welcome to the Home Page!</h1>
 <p>Hello, <span th:text="${username}"></span>! You have successfully logged in.</p>
-<!-- You can add more content here, like user details, navigation links, etc. -->
-<a href="/logout">Logout</a>
+
+<ul class="nav">
+  <li class="nav-item">
+    <a href="/user/info" class="nav-link">Change your information</a>
+  </li>
+  <li class="nav-item">
+    <a href="/logout" class="nav-link">Logout</a>
+  </li>
+</ul>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
