--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
     <a href="/user/info" class="nav-link">Change your information</a>
   </li>
   <li class="nav-item">
-    <a href="/logout" class="nav-link">Logout</a>
+    <a href="/user/logout" class="nav-link">Logout</a>
   </li>
 </ul>
 
