feat : finished working on JWT logic (log in, log out, token persistence) and fixed login.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,6 +8,6 @@
 <h1>Welcome to the Home Page!</h1>
 <p>Hello, <span th:text="${username}"></span>! You have successfully logged in.</p>
 <!-- You can add more content here, like user details, navigation links, etc. -->
-<a href="/logout">Logout</a>
+<a href="/user/logout">Logout</a>
 </body>
 </html>
