--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,26 +12,35 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0; /* Reset default margin */
     }
+
     .login-container {
       background-color: white;
       padding: 20px;
       border-radius: 5px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      width: auto; /* Adjust width as needed */
+      box-sizing: border-box; /* Include padding and border in the width and height */
     }
+
     .form-input {
       margin-bottom: 15px;
     }
+
     .form-input label {
       display: block;
       margin-bottom: 5px;
     }
+
     .form-input input {
       width: 100%;
       padding: 10px;
       border: 1px solid #ddd;
       border-radius: 4px;
+      box-sizing: border-box; /* Include padding and border in the width */
     }
+
     .form-submit {
       width: 100%;
       padding: 10px;
@@ -41,9 +50,18 @@
       border-radius: 4px;
       cursor: pointer;
     }
+
     .form-submit:hover {
       background-color: #004494;
     }
+
+    /* Responsive adjustments */
+    @media (max-width: 600px) {
+      .login-container {
+        width: 90%; /* Adjust for smaller screens */
+      }
+    }
+
   </style>
 </head>
 <body>
@@ -63,6 +81,14 @@
 </div>
 
 <!-- Add your JavaScript file here -->
-<!-- <script src="path/to/your/script.js"></script> -->
+<script th:inline="javascript">
+  /*<![CDATA[*/
+  var loginError = /*[[${loginError}]]*/ 'defaultError';
+  if (loginError && loginError !== 'defaultError') {
+    alert(loginError);
+  }
+  /*]]>*/
+</script>
+
 </body>
 </html>
