--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -4,51 +4,63 @@
     <meta charset="UTF-8">
     <title>User Info</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script type="text/javascript" th:src="@{/js/info.js}"></script>
 </head>
 <body class="m-3">
 
 <div class="container">
     <div class="row">
         <span class="m-2 p-2 fw-bold" style="font-size: 30px">User Info</span>
-        <ul class="list-group">
-            <li class="list-group-item">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3">Name</div>
-                        <div class="col">Something</div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3">Email</div>
-                        <div class="col">Something</div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3">Address</div>
-                        <div class="col">Something</div>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-3">Status Message</div>
-                        <div class="col">
-                            <textarea class="form-control">Something</textarea>
-                            <button type="button" id="change-message" class="btn btn-primary w-25 m-2">Change!</button>
+        <form id="userInfoForm" action="#">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3">Name</div>
+                            <div class="col">
+                                <input type="text" class="form-control" th:value="${name}" name="name" readonly />
+                            </div>
                         </div>
                     </div>
-            </li>
-        </ul>
+                </li>
+                <li class="list-group-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3">Email</div>
+                            <div class="col">
+                                <input type="text" class="form-control" th:value="${email}" name="email" readonly />
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3">Address</div>
+                            <div class="col">
+                                <input type="text" class="form-control" th:value="${address}" name="address" readonly />
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-3">Status Message</div>
+                            <div class="col">
+                                <textarea class="form-control" th:value="${message}" name="message" readonly ></textarea>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <button type="button" id="editButton" class="btn btn-primary" onclick="makeEditable()">Edit</button>
+                    <button type="button" id="submitButton" class="btn btn-primary" style="display: none;" onclick="submitUserInfo()">Submit</button>
+                </li>
+            </ul>
+        </form>
     </div>
 </div>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
