--- a/src/main/resources/static/css/userRequest.css
+++ b/src/main/resources/static/css/userRequest.css
@@ -2,8 +2,7 @@
 
 body {
     font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
+
 }
 
 .container {
@@ -11,6 +10,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin: 20px;
 }
 
 .left {
