--- a/src/main/resources/templates/community/article.html
+++ b/src/main/resources/templates/community/article.html
@@ -10,21 +10,9 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <style>
-        .logo {
-            width: 3em;
-            height: 3em;
-        }
-        .navbar-nav {
-            margin-right: auto;
-            margin-left: auto;
-            font-size: 1.2em; /* Increase font size */
-        }
-        .navbar {
-            justify-content: space-between; /* Adjusts the spacing */
-        }
-    </style>
+    <script th:src="@{/js/community/article.js}"></script>
 
+    <link th:href="@{/css/navbar.css}" rel="stylesheet">
 
     <style>
         #main {
@@ -41,9 +29,10 @@
     </style>
 </head>
 <body>
+
 <!-- Bootstrap Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#"><img class="logo" src="image/fruntier-logo.png"/></a>
+    <a class="navbar-brand" th:href="@{/home}"><img class="logo" th:src="@{/image/fruntier-logo.png}"/></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,22 +40,24 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" th:href="@{/home}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" th:href="@{/about}">About</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" th:href="@{/running}">Run!</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" th:href="@{/community}">Together</a>
             </li>
         </ul>
     </div>
-    <button class="btn btn-primary">Login</button>
+    <div th:switch="${not_logged_in}">
+        <a class="btn btn-primary" role="button" th:case="${true}" th:href="@{/user/login}">Login</a>
+        <a class="btn btn-primary" role="button" th:case="${null}" th:href="@{/user/home}">User Page</a>
+    </div>
 </nav>
-
 <!-- Rest of your homepage content goes here, possibly using Bootstrap's grid system for layout -->
 
 <div id="main" class="container">
@@ -80,13 +71,14 @@
     </div>
 
     <ul id="comments" class="list-group list-group-flush">
-        <li class="list-group-item">what the guk</li>
-        <li class="list-group-item">that sh</li>
+        <li th:each="comment: ${comments}"
+            th:text="${comment.content}"
+            class="list-group-item"></li>
     </ul>
 
     <div id="new-comments" class="row">
         <textarea id="comment-textarea" class="col-md-8 offset-md-1"></textarea>
-        <button type="button" id="add-article-btn" class="col-md-1 offset-md-1 btn btn-primary">
+        <button type="button" id="add-comment-btn" class="col-md-1 offset-md-1 btn btn-primary">
             comment
         </button>
     </div>
