--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,22 +1,66 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Home Page</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <link th:href="@{/css/navbar.css}" rel="stylesheet">
+
+    <style>
+        .main {
+            margin-top: 30px;
+        }
+    </style>
 </head>
-<body class="container">
-<h1>Welcome to the Home Page!</h1>
-<p>Hello, <span th:text="${username}"></span>! You have successfully logged in.</p>
+<body>
 
-<ul class="nav">
-  <li class="nav-item">
-    <a href="/user/info" class="nav-link">Change your information</a>
-  </li>
-  <li class="nav-item">
-    <a href="/user/logout" class="nav-link">Logout</a>
-  </li>
-</ul>
+<!-- Bootstrap Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" th:href="@{/home}"><img class="logo" th:src="@{/image/fruntier-logo.png}"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/home}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/about}">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/running}">Run!</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/community}">Together</a>
+            </li>
+        </ul>
+    </div>
+    <div th:switch="${not_logged_in}">
+        <a class="btn btn-primary" role="button" th:case="${true}" th:href="@{/user/login}">Login</a>
+        <a class="btn btn-primary" role="button" th:case="${null}" th:href="@{/user/home}">User Page</a>
+    </div>
+</nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<div class="container main">
+    <h1>Welcome to the Home Page!</h1>
+    <p>Hello, <span th:text="${username}"></span>! You have successfully logged in.</p>
+
+    <ul class="nav">
+        <li class="nav-item">
+            <a href="/user/info" class="nav-link">Change your information</a>
+        </li>
+        <li class="nav-item">
+            <a href="/user/logout" class="nav-link">Logout</a>
+        </li>
+    </ul>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
