--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -5,8 +5,40 @@
     <title>User Info</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script type="text/javascript" th:src="@{/js/info.js}"></script>
+
+    <link th:href="@{/css/navbar.css}" rel="stylesheet">
 </head>
-<body class="m-3">
+<body>
+<!-- Bootstrap Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" th:href="@{/home}"><img class="logo" th:src="@{/image/fruntier-logo.png}"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/home}">Home </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/about}">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/running}">Run!</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/community}">Together</a>
+            </li>
+        </ul>
+    </div>
+    <div th:switch="${not_logged_in}">
+        <a class="btn btn-primary" role="button" th:case="${true}" th:href="@{/user/login}">Login</a>
+        <a class="btn btn-primary" role="button" th:case="${null}" th:href="@{/user/home}">User Page</a>
+    </div>
+</nav>
+
+
 
 <div class="container">
     <div class="row">
