--- a/src/main/resources/static/css/community/article.css
+++ b/src/main/resources/static/css/community/article.css
@@ -15,3 +15,18 @@
 .comment-content {
 
 }
+
+.comment-edit-content {
+    width: 100%;
+}
+
+.comment-edit-content-text {
+    height: 2em;
+    flex-grow: 0.9;
+    margin-right: 1em;
+}
+
+textarea {
+  box-sizing: border-box;
+  resize: none;
+}
