--- a/src/main/resources/templates/messageOriginal.html
+++ b/src/main/resources/templates/messageOriginal.html
@@ -3,33 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced Chat UI</title>
+  <title>Message</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .logo {
-      width: 50px; /* Adjust logo size for better visibility */
-      height: auto; /* Maintain aspect ratio */
+      width: 3em;
+      height: 3em;
     }
+    /* Ensure that the chat and user list boxes take full height of the container */
     .full-height {
-      min-height: 100vh; /* Ensure full viewport height */
+      height: 100vh; /* Use 100vh to make the container full viewport height */
     }
     .chat-area, .user-list {
-      overflow-y: auto;
-    }
-    .user-list .list-group-item:hover, .user-list .list-group-item.active {
-      cursor: pointer;
-      background-color: #f0f0f0; /* Add hover effect for list items */
-    }
-    .chat-area {
-      background-color: #fff; /* Ensure contrast for readability */
-      border-left: 1px solid #dee2e6; /* Add separation between chat and user list */
-    }
-    #divMessageBox {
-      background-color: #f8f9fa; /* Differentiate message box from chat area */
-      padding: 20px; /* Add padding for spacing */
-    }
-    #messageBox {
-      resize: none; /* Prevent resizing to keep layout clean */
+      overflow-y: auto; /* Add scroll to the divs if content is taller than the div */
     }
   </style>
 </head>
@@ -61,11 +47,8 @@
 <div class="container-fluid full-height">
   <div class="row full-height">
     <!-- User List -->
-    <div class="col-lg-4 col-md-5 user-list">
+    <div class="col-md-4 user-list">
       <div class="card">
-        <div class="card-header">
-          Users
-        </div>
         <ul class="list-group list-group-flush">
           <!-- Dynamic user list here -->
           <li class="list-group-item" th:data-login-username="${loginUser.username}" th:data-opponent-username="${user.username}"
@@ -76,27 +59,24 @@
       </div>
     </div>
     <!-- Chat Area -->
-    <div class="col-lg-8 col-md-7">
+    <div class="col-md-8">
       <div class="row">
         <div class="col-12 chat-area">
           <div class="card" style="height: 75%;">
-            <div class="card-header" id="chatLogo">
-              Please Select User
-            </div>
             <ul class="list-group list-group-flush" id="message-list">
-              <!-- Messages will be displayed here -->
+
             </ul>
           </div>
         </div>
         <!-- Send Message Area -->
         <div class="col-12" style="height: 25%;">
-          <div class="card" id="divMessageBox">
+          <div class="card" style="display: none;" id="divMessageBox">
             <form id="messageForm">
               <div class="form-group">
                 <label for="messageBox">Send Message</label>
                 <textarea class="form-control" id="messageBox" rows="3"></textarea>
               </div>
-              <button id="sendButton" type="button" class="btn btn-primary" onclick="sendMessage(this)" th:data-login-username="${loginUser.username}">Send</button>
+              <button id="sendButton" type="button" class="btn btn-primary" onclick="sendMessage(this)" th:data-login-username="${loginUser.username}">Submit</button>
             </form>
           </div>
         </div>
@@ -106,7 +86,8 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/<script type="text/javascript" th:src="@{/js/message.js}"></script>
+1.14.7/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script type="text/javascript" th:src="@{/js/message.js}"></script>
 </body>
