feat : record implemetation

--- a/src/main/resources/templates/submit-route.html
+++ b/src/main/resources/templates/submit-route.html
@@ -26,7 +26,7 @@
         <option value="2">2 - Fair</option>
         <option value="1">1 - Poor</option>
     </select>
-
+    <script src="../js/userRequest.js"></script>
     <button id="submitRecord">저장하기!</button>
 </form>
 </body>
