--- a/src/main/resources/templates/userRequest.html
+++ b/src/main/resources/templates/userRequest.html
@@ -32,6 +32,12 @@
         <div class="generate_recommend_route">
             <button id="generateRoute">추천 경로 만들기</button>
         </div>
+        <br>
+        <div class="store_recommend_route">
+            <label for="routeTitle">경로 제목 : </label>
+            <input type="text" id="routeTitle"/>
+            <button id="recordRoute">추천 경로 저장하기</button>
+        </div>
     </div>
 </div>
 </body>
