--- a/src/main/resources/templates/community/community-main.html
+++ b/src/main/resources/templates/community/community-main.html
@@ -27,33 +27,7 @@
 <!-- Bootstrap Navigation Bar -->
 
 <!-- Bootstrap Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" th:href="@{/home}"><img class="logo" th:src="@{/image/fruntier-logo.png}"/></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" th:href="@{/home}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/about}">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/running}">Run!</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/community}">Together</a>
-            </li>
-        </ul>
-    </div>
-    <div th:switch="${not_logged_in}">
-        <a class="btn btn-primary" role="button" th:case="${true}" th:href="@{/user/login}">Login</a>
-        <a class="btn btn-primary" role="button" th:case="${null}" th:href="@{/user/home}">User Page</a>
-    </div>
-</nav>
+<div th:replace="layout :: navbar"></div>
 
 <!-- Rest of your homepage content goes here, possibly using Bootstrap's grid system for layout -->
 
