feat: add basic friend add mechanics

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Layout Page</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
     <!-- Other CSS and JS dependencies -->
 </head>
 <body>
