feat : implement route and record service and refactor js and htmls.

--- a/src/main/resources/templates/recommend/userRequest.html
+++ b/src/main/resources/templates/recommend/userRequest.html
@@ -24,7 +24,7 @@
         <p>출발지와 도착지를 선택해주세요.</p>
         <div id="map"></div>
         <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5cf8836fb662afb5dbdf8f0c054fce52&libraries=drawing"></script>
-        <script type="text/javascript" th:src="@{/js/userRequest.js}"></script>
+        <script type="text/javascript" th:src="@{/js/recommend/userRequest.js}"></script>
         <script>
             document.getElementById('clickLatlng')
         </script>
