--- a/src/main/resources/templates/route/route-save.html
+++ b/src/main/resources/templates/route/route-save.html
@@ -8,7 +8,7 @@
 
 <body>
 <h1>Route Save Page</h1>
-<script type="text/javascript" th:src="@{/js/userRequest.js}"></script>
+<script type="text/javascript" th:src="@{/js/recommend/userRequest.js}"></script>
 
 <form action="/route/save" method="POST">
     <label for="title">Route Title:</label><br>
