feat : feat error handling for make recommend route and save success page.

--- a/src/main/resources/templates/route/route-element.html
+++ b/src/main/resources/templates/route/route-element.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Route Element</title>
-    <script src="js/route/route.js" defer></script> <!-- Link to the JavaScript file -->
+    <script src="../js/route/route.js" defer></script> <!-- Link to the JavaScript file -->
 </head>
 <body>
 <h1>Route Element</h1>
